--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -7,12 +7,6 @@
     font-family: "PT Sans";
 }
 
-header {
-    height: 80px;
-    background-color: rgb(53, 53, 53);
-}
-
-
 
 /* Cabecario */
 
@@ -26,7 +20,7 @@ header {
 }
 
 .container_disciplinas {
-    width: 90%;
+    width: 1300px;
     height: auto;
     display: flex;
     justify-content: center;
@@ -34,14 +28,25 @@ header {
     flex-direction: column;
 }
 
-.container_disciplinas h1 {
+.escrita_disciplinas {
+    width: 1100px;
+    height: 100px;
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+
+}
+
+.escrita_disciplinas h1 {
     font-size: 35px;
     color: rgb(39, 39, 39);
 }
 
 .linha {
-    background-color: rgb(226, 6, 6);
-    width: 150px;
+    background-color: #0F2ABF;
+    width: 100px;
     height: 2px;
     border-radius: 10px;
     margin-bottom: 30px;
@@ -51,12 +56,11 @@ header {
 /* cabecario categorias*/
 
 .cabecario_disciplinas {
-    width: 900px;
+    width: 1100px;
     height: 80px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    flex-direction: column;
 }
 
 .filtro_categorias {
@@ -70,9 +74,9 @@ header {
 .filtro_categorias button {
     width: 100px;
     height: 35px;
-    margin: 5px;
-    border-radius: 5px;
-    background-color: rgb(36, 36, 36);
+    margin: 3px;
+    border-radius: 2px;
+    background-color: #0F2ABF;
     color: white;
     border: none;
     font-weight: bold;
@@ -81,7 +85,7 @@ header {
 /* cabecario pesquisa */
 
 .pesquisar {
-    width: 600px;
+    width: 500px;
     height: auto;
     display: flex;
     justify-content: center;
@@ -96,13 +100,32 @@ header {
 #pesquisarInput {
     width: 500px;
     height: 40px;
-    border-radius: 5px;
-    border: 1px solid rgb(134, 134, 134);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border: none;
+    box-shadow: 0px 0px 1.5px rgb(39, 39, 39);
+}
+
+.pesquisarInput_lado {
+    width: 40px;
+    height: 40px;
+    background-color: #0F2ABF;
+    box-shadow: 0px 0px 1px black;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pesquisarInput_lado img {
+    width: 25px;
+    height: 25px;
 }
 
 /* cards */
 .cards {
-    width: 90%;
+    width: 1200px;
     height: 100%;
     display: flex;
     justify-content: center;
