--- a/css/templates_disciplina.css
+++ b/css/templates_disciplina.css
@@ -7,17 +7,75 @@
     font-family: "PT Sans";
 }
 
-
+/* header */
 header {
-    height: 60px;
-    background-color: rgb(46, 46, 46);
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1c1c1c;
 }
 
-footer {
-    height: 100px;
-    background-color: rgb(46, 46, 46);
-
+span {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #686868;
+    font-size: 25px;
 }
+
+.container_header_curso {
+    width: 1400px;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header_compartilhe {
+    width: 130px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1c1c1c;
+    border: 1px solid white;
+    color: white;
+    font-weight: 900;
+}
+
+.header_compartilhe img {
+    width: 15px;
+    margin: 5px;
+}
+
+.header_compartilhe:hover {
+    background-color: #313131;
+}
+
+.escrita_header_curso {
+    width: 500px;
+    height: 50px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.escrita_header_curso img {
+    width: 90px;
+    height: 40px;
+}
+
+.links_header_curso h2 {
+    font-size: 18px;
+    color: white;
+    font-weight: 500;
+}
+
+/* conteudos */
 
 .all {
     width: 100%;
