--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -125,7 +125,7 @@
 
 /* cards */
 .cards {
-    width: 1200px;
+    width: 1300px;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -133,62 +133,88 @@
     flex-wrap: wrap;
 }
 
-.card {
-    width: 230px;
-    height: 500px;
+.card{
+    width: 400px;
+    height:250px;
     display: flex;
     justify-content: space-between;
-    align-items: left;
+    align-items: center;
     flex-direction: column;
-    margin: 30px;
-    border: 1px solid rgb(99, 99, 99);
-    border-radius: 5px;
-    transition: 0.3s;
-}
-
-.card:hover {
-    width: 235px;
-    height: 510px;
-    opacity: 0.9;
-
-}
-
-.card h2 {
-    width: 200px;
-    font-size: 20px;
     margin: 10px;
-    font-weight: 900;
-    text-align: left;
-    color: rgb(32, 32, 32);
+    border: 1px solid rgb(202, 202, 202);
 }
 
-.card p {
-    width: 200px;
-    font-size: 15px;
-    margin: 10px;
-    text-align: left;
-    color: rgb(41, 41, 41);
-}
-
-.card a {
+.card a{
     width: 100%;
-    height: 35px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(49, 49, 49);
-    color: white;
-    font-weight: 800;
     text-decoration: none;
+    font-size: 18px;
+    color: white;
+    font-weight: bold;
+    background-color: #4FAD64;
 }
 
-.card:hover a {
-    background-color: rgb(34, 34, 34);
+.container_card {
+    width: 400px;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.card img {
-    width: 100%;    
-    height: 50%;
-    background-size: cover;
+.escrita_card {
+    width: 250px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: left;
+    flex-direction: column;
 }
+
+.escrita_card h1 {
+    margin: 10px;
+    font-size: 25px;
+}
+
+.escrita_card p {
+    width: 200px;
+    height: auto;
+    margin: 10px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
+
+.container_card img{
+    width: 100px;
+}
+
+.container_card h2 {
+    margin-left: 5px;
+    font-size: 20px;
+    font-weight: 700;
+    color: rgb(43, 43, 43);
+}
+
+.dificuldade_card{
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.dificuldade_card img {
+    width: 20px;
+    height: 20px;
+}
+
+.foto_card {
+    width: 150px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
