--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -1,10 +1,54 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Geist:wght@100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Geist:wght@100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0;
     padding: 0;
+    
+}
+/* Header */
+
+header {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1c1c1c;
     font-family: "PT Sans";
+}
+
+.container_header_disciplinas {
+    width: 1300px;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.links_disciplinas {
+    width: 400px;
+    height: auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.links_disciplinas a {
+    font-size: 16px;
+    text-decoration: none;
+    color: white;
+}
+
+.links_disciplinas img {
+    width: 90px;
+}
+
+.linha_grande {
+    width: 1200px;
+    height: 1px;
+    background-color: rgb(143, 143, 143);
+
 }
 
 
@@ -17,6 +61,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-family: "Mulish";
 }
 
 .container_disciplinas {
@@ -29,8 +74,8 @@
 }
 
 .escrita_disciplinas {
-    width: 1100px;
-    height: 100px;
+    width: 1200px;
+    height: 90px;  
     margin-top: 80px;
     display: flex;
     flex-direction: column;
@@ -46,8 +91,9 @@
 
 .linha {
     background-color: #0F2ABF;
-    width: 100px;
-    height: 2px;
+    width: 150px;
+    border-radius: 10px;
+    height: 3px;
     border-radius: 10px;
     margin-bottom: 30px;
 
@@ -59,7 +105,7 @@
     width: 1100px;
     height: 80px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -76,7 +122,7 @@
     height: 35px;
     margin: 3px;
     border-radius: 2px;
-    background-color: #0F2ABF;
+    background-color: #1c1c1c;
     color: white;
     border: none;
     font-weight: bold;
@@ -109,7 +155,7 @@
 .pesquisarInput_lado {
     width: 40px;
     height: 40px;
-    background-color: #0F2ABF;
+    background-color: #272727;
     box-shadow: 0px 0px 1px black;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
@@ -162,7 +208,7 @@
     height: auto;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .escrita_card {
@@ -172,17 +218,23 @@
     justify-content: center;
     align-items: left;
     flex-direction: column;
+
 }
 
 .escrita_card h1 {
-    margin: 10px;
-    font-size: 25px;
+    margin-top: 15px;
+    margin-left: 15px;
+    margin-bottom: 5px;
+    font-size: 20px;
+    color: rgb(37, 37, 37);
 }
 
 .escrita_card p {
     width: 200px;
     height: auto;
-    margin: 10px;
+    margin: 5px;
+    margin-left: 15px;
+    margin-bottom: 10px;
     word-wrap: break-word;
     overflow-wrap: break-word;
 }
@@ -211,10 +263,8 @@
 
 .foto_card {
     width: 150px;
-    height: auto;
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
-
