--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -4,7 +4,7 @@
 * {
     margin: 0;
     padding: 0;
-    
+    font-family: "PT Sans";
 }
 /* Header */
 
@@ -14,15 +14,14 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1c1c1c;
-    font-family: "PT Sans";
+    background-color: #044CF2;
 }
 
 .container_header_disciplinas {
     width: 1300px;
     height: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -40,43 +39,53 @@ header {
     color: white;
 }
 
-.links_disciplinas img {
+.container_header_disciplinas img {
     width: 90px;
+    height: 60px;
+}
+
+
+
+
+/* disciplinas */
+
+#disciplinas{
+    width: 100%;
+    height: 250px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
 }
 
 .linha_grande {
     width: 1200px;
     height: 1px;
     background-color: rgb(143, 143, 143);
+    border-radius: 10px;
 
-}
-
-
-/* Cabecario */
-
-#disciplinas{
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-family: "Mulish";
 }
 
 .container_disciplinas {
-    width: 1300px;
-    height: auto;
+    width: 1200px;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.escrita_disciplinas {
+.conteudo_disciplinas {
     width: 1200px;
-    height: 90px;  
-    margin-top: 80px;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.escrita_disciplinas {
+    width: auto;
+    height: 60px;  
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -89,21 +98,11 @@ header {
     color: rgb(39, 39, 39);
 }
 
-.linha {
-    background-color: #0F2ABF;
-    width: 150px;
-    border-radius: 10px;
-    height: 3px;
-    border-radius: 10px;
-    margin-bottom: 30px;
-
-}
-
-/* cabecario categorias*/
+/* disciplinas-categorias*/
 
 .cabecario_disciplinas {
-    width: 1100px;
-    height: 80px;
+    width: 350px;
+    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -122,7 +121,7 @@ header {
     height: 35px;
     margin: 3px;
     border-radius: 2px;
-    background-color: #1c1c1c;
+    background-color: #014BDB;
     color: white;
     border: none;
     font-weight: bold;
@@ -155,8 +154,7 @@ header {
 .pesquisarInput_lado {
     width: 40px;
     height: 40px;
-    background-color: #272727;
-    box-shadow: 0px 0px 1px black;
+    background-color: #ffffff;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     display: flex;
@@ -165,11 +163,19 @@ header {
 }
 
 .pesquisarInput_lado img {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
 }
 
 /* cards */
+
+.cards_all {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .cards {
     width: 1300px;
     height: 100%;
