--- a/css/templates_disciplina.css
+++ b/css/templates_disciplina.css
@@ -48,7 +48,7 @@ span {
 }
 
 .header_compartilhe img {
-    width: 15px;
+    width: 13px;
     margin: 5px;
 }
 
@@ -138,9 +138,9 @@ span {
 }
 
 .caixa_cor {
-    width: 10px;
+    width: 7px;
     height: 100%;
-    background-color: #4FAD64;
+    background-color: #0F3BBF;
 }
 
 .caixa_elemento {
