--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -68,7 +68,7 @@ header {
 }
 
 .container_disciplinas {
-    width: 1200px;
+    width: 1300px;
     height: 300px;
     display: flex;
     justify-content: center;
@@ -85,7 +85,7 @@ header {
 }
 
 .escrita_disciplinas {
-    width: auto;
+    width: 100%;
     height: 60px;  
     display: flex;
     flex-direction: column;
@@ -102,7 +102,7 @@ header {
 /* disciplinas-categorias*/
 
 .cabecario_disciplinas {
-    width: 350px;
+    width: auto;
     height: 60px;
     display: flex;
     justify-content: center;
@@ -167,6 +167,28 @@ header {
     width: 20px;
     height: 20px;
 }
+
+/* Nao encontrado*/
+
+.naoEncontrado {
+    width: 300px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.naoEncontrado p {
+    font-size: 17px;
+    font-weight: 600;
+}
+
+.naoEncontrado img {
+    width: 70px;
+    margin: 10px;
+}
+
 
 /* cards */
 
