sistema de cadastro

--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -18,7 +18,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #0F3BBF;
+    background-color: #007bff;
 }
 
 .container_header_disciplinas {
