--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -48,6 +48,46 @@ header {
     height: 60px;
 }
 
+#cadastro {
+    width: auto;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#cadastro a {
+    width: 80px;
+    height: 30px;
+    padding: 6px;
+    font-size: 14px;
+    background-color: white;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 3px;
+    color: #007bff;
+    font-weight: 800;
+}
+
+#cadastro button {
+    width: 80px;
+    height: 30px;
+    padding: 6px;
+    font-size: 14px;
+    background-color: white;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 3px;
+    color: #007bff;
+    font-weight: 800;
+}
+
 /* disciplinas */
 
 #disciplinas{
@@ -135,7 +175,7 @@ header {
 /* cabecario pesquisa */
 
 .pesquisar {
-    width: 500px;
+    width: 600px;
     height: auto;
     display: flex;
     justify-content: center;
@@ -143,8 +183,8 @@ header {
 }
 
 #pesquisarInput {
-    width: 500px;
-    height: 50px;
+    width: 600px;
+    height: 40px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: none;
@@ -153,10 +193,11 @@ header {
 
 .pesquisarInput_lado {
     width: 45px;
-    height: 50px;
-    background-color: #0f46eb;
-    border-top-right-radius: 1px;
-    border-bottom-right-radius: 1px;
+    height: 40px;
+    background-color: white;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    box-shadow: 0px 0px 1.5px rgb(39, 39, 39);
     display: flex;
     justify-content: center;
     align-items: center;
