--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -22,6 +22,7 @@
     align-items: center;
 }
 
+/* quadrado azul */
 .conteudo_cadastro {
     width: 60%;
     height: 100vh;
@@ -30,8 +31,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: blue  ;
+    background-color: #007bff;
 }
+
+/* Login */
 
 .conteudo_login-cadastro {
     width: 40%;
@@ -40,6 +43,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column; 
+}
+
+.conteudo_login-cadastro p {
+    font: 15px;
+    
 }
 
 .dhiovana {
@@ -52,105 +60,98 @@
 }
 
 .dhiovana img {
-    width: 150px;
+    width: 200px;
 }
 
 /* CADASTRO */
 
-#register-form {
+.register-form {
     width: 300px;
-    height: 400px;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: left;
 }
 
-.inputDiv{
+.inputDiv {
     width: 300px;
-    height: 80px;
+    height: auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    margin-top: 10px;
 }
 
 .inputDiv input {
-    width: 300px;
-    height: 30px;
-    margin-left: 10px;
+    width: 100%;
+    height: 40px;
     border: none;
-    box-shadow: 0px 0px 1px black;
+    box-shadow: 0px 0px 2px black;
+    padding: 5px;
+    border-radius: 10px;
+    margin-top: 5px;
 }
 
 .inputDiv h2 {
     font-size: 14px;
-    margin-left: 10px;
-    margin-top: 20px;
-    color: rgb(105, 105, 105);
+    font-weight: 500;
+    color: rgb(122, 122, 122);
+}
+
+.buttonDiv {
+    width: 300px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    flex-direction: column;
 }
 
 .registrar_button {
-    width: 100px;
-    height: 35px;
-    margin: 10px;
-    border: none;
+    width: 200px;
+    height: 30px;
     background-color: #007bff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 13px;
+    border: none;
+    border-radius: 10px;
     color: white;
-    border-radius: 3px;
+    font-weight: 600;
 }
 
 #toggle-login {
-    width: 150px;
-    border: none;
-    margin: 5px;
-    color: rgb(53, 53, 53);
     background-color: white;
+    border: none;
+    margin-top: 10px;
+    color: rgb(100, 100, 100);
 }
-
 
 
 /* lOGIN */
 
 .login-form {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: left;
 }
 
 .login_button {
-    width: 100px;
-    height: 35px;
-    margin: 10px;
-    border: none;
+    width: 200px;
+    height: 30px;
     background-color: #007bff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 13px;
+    border: none;
+    border-radius: 10px;
     color: white;
-    border-radius: 3px;
-}
-
-.buttonDiv {
-    width: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    font-weight: 600;
 }
 
 #toggle-register {
-    width: 150px;
-    border: none;
-    margin: 5px;
-    color: rgb(53, 53, 53);
     background-color: white;
+    border: none;
+    margin-top: 10px;
+    color: rgb(100, 100, 100);
 }
