--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -26,14 +26,15 @@
 .conteudo_cadastro {
     width: 60%;
     height: 100vh;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #007bff;
+    background-color: #8C24BD;
 }
 
+.container_cadastro img {
+    width: 400px;
+}
 /* Login */
 
 .conteudo_login-cadastro {
@@ -86,7 +87,7 @@
 
 .inputDiv input {
     width: 100%;
-    height: 40px;
+    height: 30px;
     border: none;
     box-shadow: 0px 0px 2px black;
     padding: 5px;
@@ -111,9 +112,9 @@
 }
 
 .registrar_button {
-    width: 200px;
-    height: 30px;
-    background-color: #007bff;
+    width: 150px;
+    height: 40px;
+    background-color: #8C24BD;
     border: none;
     border-radius: 10px;
     color: white;
@@ -123,6 +124,7 @@
 #toggle-login {
     background-color: white;
     border: none;
+    font-size: 13px;
     margin-top: 10px;
     color: rgb(100, 100, 100);
 }
@@ -140,9 +142,9 @@
 }
 
 .login_button {
-    width: 200px;
-    height: 30px;
-    background-color: #007bff;
+    width: 150px;
+    height: 40px;
+    background-color: #8C24BD;
     border: none;
     border-radius: 10px;
     color: white;
@@ -152,6 +154,7 @@
 #toggle-register {
     background-color: white;
     border: none;
+    font-size: 13px;
     margin-top: 10px;
     color: rgb(100, 100, 100);
 }
