--- a/css/templates_disciplina.css
+++ b/css/templates_disciplina.css
@@ -14,12 +14,12 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1c1c1c;
+    background-color:  #481658;
 }
 
 span {
     width: 50px;
-    height: 50px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,8 +28,8 @@ span {
 }
 
 .container_header_curso {
-    width: 1400px;
-    height: 50px;
+    width: 1300px;
+    height: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -41,7 +41,7 @@ span {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1c1c1c;
+    background-color:  #481658;
     border: 1px solid white;
     color: white;
     font-weight: 900;
@@ -53,7 +53,7 @@ span {
 }
 
 .header_compartilhe:hover {
-    background-color: #313131;
+    background-color:  #4c1e5c;
 }
 
 .escrita_header_curso {
@@ -65,8 +65,8 @@ span {
 }
 
 .escrita_header_curso img {
-    width: 90px;
-    height: 40px;
+    width: 100px;
+    height: 50px;
 }
 
 .links_header_curso h2 {
