--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -30,15 +30,15 @@ header {
 }
 
 .links_disciplinas {
-    width: auto;
+    width: 400px;
     height: auto;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 
 .links_disciplinas a {
-    font-size: 14px;
+    font-size: 13px;
     margin: 10px;
     font-weight: 500;
     text-decoration: none;
@@ -194,10 +194,11 @@ header {
 
 #pesquisarInput {
     width: 400px;
-    height: 40px;
+    height: 30px;
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px;
     border: none;
+    padding: 5px;
 }
 
 .pesquisarInput_lado {
@@ -278,12 +279,12 @@ header {
     font-size: 18px;
     color: white;
     font-weight: bold;
-    background-color: #4FAD64;
+    background-color: #721d7e;
     transition: 0.5s;
 }
 
 .card a:hover {
-    background-color: #1da33a;
+    background-color: #9931a7;
 }
 
 .container_card {
