--- a/css/painel.css
+++ b/css/painel.css
@@ -1,37 +1,136 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .painel {
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    text-align: center;
-    padding: 20px;
-  }
-  
-  h1 {
-    color: #333;
-  }
-  
-  .acoes_painel button {
-    background: #007D32;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .acoes_painel button:hover {
-    background: #005a23;
-  }
-  
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Geist:wght@100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "PT Sans";
+}
+
+.linha   {
+  width: 100%;
+  height: 1px;
+  border-radius: 10px;
+  background-color: rgb(134, 134, 134);
+}
+
+.painel {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.container_painel {
+  width: 900px;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: left;
+  flex-direction: column;
+}
+
+.container_painel h1 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 30px;
+  color: #1f1f1f;
+}
+
+.container_painel p {
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+/* Favoritos */
+
+#favoritos {
+  width: 900px;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: left;
+  flex-direction: column;
+}
+
+#favoritos h2 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.container_favoritos {
+  width: 900px;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.favorito_card {
+  width: 230px;
+  height: 300px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: left;
+  border: 1px solid rgb(161, 161, 161);
+}
+
+.favorito_card h2 {
+  font-size: 18px;
+  margin: 10px;
+}
+
+.favorito_card p {
+  margin-left: 10px;
+
+}
+
+.favorito_card a {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1B3DA6;
+  text-decoration: none;
+  color: white;
+  font-size: 15px;
+}
+
+.favorito_card img {
+  width: 90px;
+  margin-left: 10px;
+}
+
+/* acoes */
+
+.acoes_painel {
+  width: 900px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: left ;
+  flex-direction: column;
+}
+
+.acoes_painel h2 {
+  color: #1f1f1f;
+  font-size: 17px;
+  margin-bottom: 10px;
+}
+
+.acoes_painel button {
+  width: 80px;
+  height: 30px;
+  color: white;
+  font-weight: 600;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center ;
+  border: none;
+  background-color: #ca1313;
+  border-radius: 3px;
+}
