--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -105,6 +105,14 @@ header {
     font-weight: 800;
 }
 
+.acoes_disciplinas {
+    width: 150px;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 /* disciplinas */
 
 #disciplinas{
