--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -380,7 +380,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #2a262b;
+    background-color: #615f61;
     transition: 0.5s;
 }
 
