--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -187,7 +187,7 @@ header {
     height: 35px;
     margin: 3px;
     background-color: rgb(218, 218, 218);
-    color: rgb(31, 31, 31);
+    color: rgb(0, 0, 0);
     border: none;
     box-shadow: 0px 0px 1px black;
     font-weight: bold;
@@ -380,7 +380,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #615f61;
+    background-color: #1B3DA6;;
     transition: 0.5s;
 }
 
@@ -389,7 +389,7 @@ header {
 }
 
 .btn-favoritar:hover {
-    background-color: #ad47bb;
+    background-color: #1544d1;
 }
 
 .links_card a{
@@ -402,10 +402,10 @@ header {
     font-size: 18px;
     color: white;
     font-weight: bold;
-    background-color: rgb(128, 128, 128);
+    background-color: #1B3DA6;
     transition: 0.5s;
 }
 
 .links_card a:hover {
-    background-color: #1B3DA6;
+    background-color: #1744ca;
 }
