--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -498,5 +498,5 @@ header {
 
 .links-hover a:hover,
 .links-hover button:hover {
-    background-color: #1544d1;
+    background-color: #7230c7;
 }
