--- a/css/painel.css
+++ b/css/painel.css
@@ -6,11 +6,8 @@
   font-family: "PT Sans";
 }
 
-.linha   {
-  width: 100%;
-  height: 1px;
-  border-radius: 10px;
-  background-color: rgb(134, 134, 134);
+span {
+  color: #8136e3;
 }
 
 .painel {
@@ -20,6 +17,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: #1c1c1c;
 }
 
 .container_painel {
@@ -31,28 +29,44 @@
   flex-direction: column;
 }
 
-.container_painel h1 {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  font-size: 30px;
-  color: #1f1f1f;
+.bem_vindo {
+  width: 900px;
+  height: 60px;
+  background-color: #141414;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  margin-top: 30px;
+  border-radius: 10px;
 }
 
-.container_painel p {
-  font-size: 14px;
-  margin-bottom: 20px;
+.bem_vindo h1 {
+  font-size: 17px;
+  color: white;
+  margin-left: 20px;
 }
+
+.bem_vindo img {
+  width: 45px;
+  margin-left: 10px;
+}
+
+
+
 /* Favoritos */
 
 #favoritos {
   width: 900px;
   height: auto;
+  margin-top: 40px;
   display: flex;
   justify-content: center;
   align-items: left;
   flex-direction: column;
 }
 
+
+/* favoritos */
 #favoritos h2 {
   margin-top: 20px;
   margin-bottom: 20px;
@@ -61,25 +75,53 @@
 .container_favoritos {
   width: 900px;
   display: flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
   justify-content: left;
   align-items: center;
   flex-wrap: wrap;
+  background-color: #252525;
 }
 
-.favorito_card {
-  width: 230px;
-  height: 300px;
-  margin: 10px;
+.ver_favoritos {
+  width: 200px;
+  height: 40px; 
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: left;
+  align-items: center;
+  background-color: #252525;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.ver_favoritos h2 { 
+  color: rgb(214, 214, 214);
+  font-size: 16px;
+}
+.ver_favoritos img {
+  width: 20px;
+  margin: 10px;
+}
+
+/* cards */
+
+.favorito_card {
+  width: 200px;
+  height: 170px;
+  display: flex;
+  justify-content: center;
   align-items: left;
-  border: 1px solid rgb(161, 161, 161);
+  flex-direction: column;
+  padding: 20px;
+  margin: 10px;
+  border: 1px solid rgb(49, 49, 49);
+  border-radius: 10px;
+  background-color: #202020;
 }
 
 .favorito_card h2 {
-  font-size: 18px;
-  margin: 10px;
+  font-size: 15px;
+  color: rgb(221, 221, 221);
 }
 
 .favorito_card p {
@@ -87,21 +129,22 @@
 
 }
 
+.favorito_card img {
+  width: 30px;
+}
+
 .favorito_card a {
-  width: 100%;
+  width: 80px;
   height: 30px;
+  font-size: 14px;
+  text-decoration: none;
+  background-color: #8136e3;
+  border-radius: 2px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #1B3DA6;
-  text-decoration: none;
   color: white;
-  font-size: 15px;
-}
-
-.favorito_card img {
-  width: 90px;
-  margin-left: 10px;
+  font-weight: bold;
 }
 
 /* acoes */
@@ -116,7 +159,7 @@
 }
 
 .acoes_painel h2 {
-  color: #1f1f1f;
+  color: #c4c4c4;
   font-size: 17px;
   margin-bottom: 10px;
 }
