--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -364,6 +364,7 @@ header {
 
 .duracao_card img {
     width: 11px;
+    border-radius: 360px;
 }
 
 .item_dificuldade {
@@ -404,6 +405,8 @@ header {
 
 .foto_card img {
     width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
 
 .links_card {
