--- a/css/templates_disciplina.css
+++ b/css/templates_disciplina.css
@@ -17,6 +17,7 @@ header {
     background-color:  #141414;
 }
 
+
 span {
     width: 50px;
     height: 40px;
@@ -87,36 +88,57 @@ span {
 
 /* cabecario */
 .topicos {
-    width: 30%;
+    width: 300px;
     height: auto;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
     box-shadow: 0px 0px 1px black;
+    transition: width 0.3s ease-in-out;
+    overflow: hidden;
+    background-color: #141414;
+}
+
+.topicos.minimized {
+    width: 50px;
+}
+
+.topicos.minimized .elementos {
+    display: none;
+}
+
+.topicos.minimized .escrita_topicos h1 {
+    display: none;
+}
+
+.topicos.minimized #toggleIcon {
+    transform: rotate(180deg);
 }
 
 .escrita_topicos {
     width: 100%;
     height: 60px;
     display: flex;
-    justify-content: center;
-    align-items: left;
-    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     color: rgb(0, 0, 0);
     box-shadow: 0px 0px 1px black;
-    z-index: 1;
-    background-color: #4c1e5c;;
+    background-color: #4c1e5c;
+}
+
+.escrita_topicos button{
+    width: 25px;
+    height: 25px;
+    background-color: #4c1e5c;
+    border: none;
 }
 
 .escrita_topicos img {
-    width: 20px;
-    height: 20px;
+    width: 100%;
 }
-
 .topicos .escrita_topicos h1 {
-    margin-left: 15px;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
     color: white;
 }
@@ -142,7 +164,7 @@ span {
 .caixa_cor {
     width: 7px;
     height: 100%;
-    background-color: #0F3BBF;
+    background-color: #4c1e5c;
 }
 
 .caixa_elemento {
@@ -150,12 +172,15 @@ span {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 60px;
-    background-color: #fff;
+    height: 50px;
     cursor: pointer;
     transition: 0.3s;
     font-size: 17px;
     border: 0px;
+    background-color: #191919;
+    color: white;
+    border-bottom: 0.5px solid rgb(37, 37, 37);
+    font-size: 15px;
 }
 
 .caixa_elemento button {
@@ -163,7 +188,7 @@ span {
 }
 
 .caixa_elemento:hover {
-    background-color: #eeeeee;
+    background-color: rgb(66, 66, 66);
 }
 
 .caixa_elemento img {
@@ -179,6 +204,7 @@ span {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 12px;
 
 }
 
@@ -202,7 +228,7 @@ span {
 
 /* Conteudo */
 .conteudos {
-    width: 70%;
+    width: 100%;
     height: auto;
     display: flex;
     justify-content: flex-start;
