--- a/css/index.css
+++ b/css/index.css
@@ -1,103 +1,83 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Geist:wght@100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=PT+Mono&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap');
 * {
     margin: 0;
     padding: 0;
-    font-family: "PT Sans";
+    font-family: "Rethink Sans";
 }
 
-span {
-    color: rgb(58, 58, 207);
-    font-size: 60px;
-}
-
-/* Header index */
-
-.container_header_index {
-    width: 1200px;
-    height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.escrita_header_index {
-    width: auto;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.escrita_header_index a {
-    font-size: 16px;
-    text-decoration: none;
-    margin: 10px;
-    color: white;
-}
-
-.escrita_header_index img {
-    width: 100px;
-    margin: 10px;
-    height: 60px;
-}
-
-/* Iniciar */
-
-.disciplinas_about {
+.index {
     width: 100%;
-    height: 600px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #1c1c1c;
+}
+
+.linha  {
+    width: 100%;
+    height: 1px;
+    background-color: rgb(88, 88, 88);
+    border-radius: 10px;
+}
+
+/* Carrocel */
+
+
+/* Cursos */
+
+.cursos_exibir {
+    width: 100%;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.container_about {
-    width: 1000px;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.escrever_about {
-    width: 500px;
-    height: 400px;
+.container_exibir {
+    width: 1100px;
+    height: 100%;
     display: flex;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items:left;
     flex-direction: column;
-    margin-top: 100px;
 }
 
-.escrever_about h1 {
-    font-size: 50px;
-    color: rgb(39, 39, 39);
+.escrita_exibir {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: left;
+    flex-direction: column;
 }
 
-.escrever_about p {
-    font-size: 18px;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    color: rgb(32, 32, 32);
+.escrita_exibir h2 {
+    color: #8136e3;
+    font-size: 25px;
+    margin-bottom: 10px;
 }
 
-.escrever_about a {
-    width: 90px;
-    height: 50px;
-    border: none;
-    background-color: rgb(29, 29, 29);
-    color: white;
-    border-radius: 3px;
+.escrita_exibir p {
+    font-size: 14px;
+    margin-bottom: 5px;
+    color: rgb(163, 163, 163);
+}
+
+.escrita_exibir a {
+    font-size: 14px;
     text-decoration: none;
+    margin-bottom: 10px;
+    color: #8136e3;
+}
+
+#cards_exibir {
+    width: 100%;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 14px;
-    font-weight: 700;
+    flex-wrap: wrap;
 }
 
-.container_about img {
-    width: 400px;
-}
