--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+
+
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=PT+Mono&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap');
 * {
     margin: 0;
@@ -7,7 +9,7 @@
 
 .index {
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,6 +26,53 @@
 
 /* Carrocel */
 
+
+/* Dilema */
+
+
+.dilema {
+    width: 100%;
+    height: 480px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.dilema h2 {
+    font-size: 35px;
+    color: white;
+    margin: 20px;
+}
+
+.container_dilema {
+    width: 1100px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.caixa_dilema {
+    width: 330px;
+    height: 300px;
+    background-color:  #8136e3;
+    margin: 30px;
+    box-shadow: 10px 10px 0px #4c1494;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.caixa_dilema h2{
+    color: white;
+    font-size: 30px;
+}
+
+.caixa_dilema img {
+    width: 170px;
+}
 
 /* Cursos */
 
