--- a/css/index.css
+++ b/css/index.css
@@ -35,17 +35,21 @@
 
 .foto_index{
     width: 100%;
-    height: 500px;
-    background-color: red;
+    height: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
 }
 
 .container_foto {
     width: 1300px;
     height: 100%;
-    background-color: blue;
+}
+
+.container_foto img{
+    width: 100%;
+    height: 100%;
 }
 
 
