--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -622,7 +622,7 @@ header {
 
     header {
         width: 100%;
-        height: 90px;
+        height: auto;
         display: flex;
         justify-content: center;
         align-items: center;
