ajueste index foto

--- a/css/index.css
+++ b/css/index.css
@@ -464,6 +464,11 @@ footer {
 
 @media (max-width: 450px){
 
+    .foto_index {
+        width: 100%;
+        height: auto;
+    }
+
     body {
         overflow-x: hidden;
     }
